--- a/FileManager/res/layout/filelist.xml
+++ b/FileManager/res/layout/filelist.xml
@@ -2,6 +2,7 @@
     android:id="@+id/flipper"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/base_bg"
     android:inAnimation="@anim/fade_in"
     android:isScrollContainer="true"
     android:outAnimation="@anim/fade_out" >
@@ -41,13 +42,17 @@
                 android:id="@android:id/list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:cacheColorHint="#00000000"
+                android:divider="@null"
                 android:fastScrollEnabled="true"
+                android:listSelector="@color/base_transparent"
                 android:paddingLeft="@dimen/list_margin"
                 android:paddingRight="@dimen/list_margin" >
             </ListView>
 
             <TextView
                 android:id="@android:id/empty"
+                style="@style/base_item_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/this_folder_is_empty"
@@ -73,14 +78,14 @@
                 android:textColor="@color/navbar_details" />
 
             <TextView
-                android:layout_weight="1"
                 android:id="@+id/clipboard_action"
+                style="@style/base_item_text"
                 android:layout_width="wrap_content"
                 android:layout_height="45dp"
+                android:layout_weight="1"
                 android:clickable="true"
                 android:gravity="center"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/navbar_details" />
+                android:textAppearance="?android:attr/textAppearanceMedium" />
         </LinearLayout>
     </RelativeLayout>
 
