--- a/FileManager/res/layout/item_filelist.xml
+++ b/FileManager/res/layout/item_filelist.xml
@@ -35,36 +35,47 @@
             android:contentDescription="@string/item_icon"
             android:scaleType="centerInside" />
 
-        <TextView
-            android:id="@+id/primary_info"
-            style="@style/base_item_text"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_toRightOf="@id/icon"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/secondary_info"
-            style="@style/base_item_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/primary_info"
-            android:layout_below="@+id/primary_info"
-            android:maxLines="1"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            <TextView
+                android:id="@+id/primary_info"
+                style="@style/base_item_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_toRightOf="@id/icon"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
-        <TextView
-            android:id="@+id/tertiary_info"
-            style="@style/base_item_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/secondary_info"
-            android:layout_alignParentRight="true"
-            android:maxLines="1"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+
+                <TextView
+                    android:id="@+id/secondary_info"
+                    style="@style/base_item_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignLeft="@+id/primary_info"
+                    android:layout_below="@+id/primary_info"
+                    android:maxLines="1"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                <TextView
+                    android:id="@+id/tertiary_info"
+                    style="@style/base_item_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/secondary_info"
+                    android:layout_alignParentRight="true"
+                    android:maxLines="1"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
