调整界面布局

--- a/FileManager/res/layout/item_filelist.xml
+++ b/FileManager/res/layout/item_filelist.xml
@@ -52,6 +52,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <LinearLayout
+                android:layout_marginLeft="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
