--- a/FileManager/res/layout/filelist_legacy_multiselect.xml
+++ b/FileManager/res/layout/filelist_legacy_multiselect.xml
@@ -3,6 +3,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <include layout="@layout/base_titlebar2" />
+
     <include
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
