--- a/FileManager/res/layout/item_filelist.xml
+++ b/FileManager/res/layout/item_filelist.xml
@@ -22,7 +22,7 @@
     <LinearLayout
         style="@style/base_card"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical" >
 
         <ImageView
@@ -36,7 +36,7 @@
             android:scaleType="centerInside" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
@@ -52,27 +52,31 @@
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
+                android:orientation="horizontal" >
 
                 <TextView
                     android:id="@+id/secondary_info"
                     style="@style/base_item_text"
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignLeft="@+id/primary_info"
                     android:layout_below="@+id/primary_info"
+                    android:layout_weight="1"
                     android:maxLines="1"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
 
                 <TextView
                     android:id="@+id/tertiary_info"
                     style="@style/base_item_text"
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@+id/secondary_info"
                     android:layout_alignParentRight="true"
+                    android:layout_weight="1"
+                    android:gravity="right"
                     android:maxLines="1"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </LinearLayout>
