--- a/FileManager/res/layout/item_filelist.xml
+++ b/FileManager/res/layout/item_filelist.xml
@@ -20,6 +20,7 @@
     android:minHeight="?android:attr/listPreferredItemHeight" >
 
     <LinearLayout
+        android:id="@+id/item_ll"
         style="@style/base_card"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -38,6 +39,8 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
             android:orientation="vertical" >
 
             <TextView
