--- a/FileManager/res/layout/filelist.xml
+++ b/FileManager/res/layout/filelist.xml
@@ -34,6 +34,8 @@
             android:layout_height="match_parent"
             android:layout_above="@+id/clipboard_info"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
             android:layout_alignParentStart="true"
             android:gravity="center"
             android:orientation="vertical" >
@@ -71,6 +73,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="45dp"
                 android:layout_toStartOf="@+id/clipboard_separator"
+                android:layout_toLeftOf="@+id/clipboard_separator"
                 android:layout_weight="1"
                 android:background="@drawable/widget_click_selector"
                 android:gravity="center" />
