--- a/FileManager/res/drawable/bg_progress_bar.xml
+++ b/FileManager/res/drawable/bg_progress_bar.xml
@@ -29,7 +29,7 @@
         <clip>
             <shape>
                 <corners android:radius="10dip" />
-                <solid android:color="@android:color/holo_blue_light" />
+                <solid android:color="@color/base_blue" />
             </shape>
         </clip>
     </item>
