[mod] 清理页面 和 文件管理器结果展示页面 progress样式替换为MD 风格

--- a/FileManager/res/layout/filelist.xml
+++ b/FileManager/res/layout/filelist.xml
@@ -1,4 +1,5 @@
 <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:wheel="http://schemas.android.com/apk/res-auto"
     android:id="@+id/flipper"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,10 +14,10 @@
         android:gravity="center"
         android:orientation="vertical" >
 
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:indeterminate="true" />
+        <com.pnikosis.materialishprogress.ProgressWheel
+                android:id="@+id/progress_wheel"
+                style="@style/materialProgress"
+                wheel:matProg_barColor="@color/base_blue"/>
 
         <TextView
                 android:id="@+id/tv_loading_default"
