--- a/FileManager/res/layout/filelist_browse.xml
+++ b/FileManager/res/layout/filelist_browse.xml
@@ -1,17 +1,17 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <include layout="@layout/filelist" />
+
     <include layout="@layout/base_titlebar2" />
 
     <com.filemanager.view.PathBar
-        android:id="@+id/pathbar"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/topBar_height"
-        android:background="@drawable/base_bg" >
+            android:id="@+id/pathbar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/topBar_height"
+            android:layout_below="@+id/titlebar"
+            android:background="@drawable/base_bg" >
     </com.filemanager.view.PathBar>
-
-    <include layout="@layout/filelist" />
-
-</LinearLayout>
+</RelativeLayout>
