--- a/FileManager/res/layout/storage_filelist_browse.xml
+++ b/FileManager/res/layout/storage_filelist_browse.xml
@@ -8,14 +8,22 @@
             android:layout_height="match_parent"
             layout="@layout/filelist"/>
 
-    <include layout="@layout/base_titlebar2"/>
-    <com.filemanager.view.PathBar
-            android:id="@+id/pathbar"
+
+    <RelativeLayout
+            android:id="@+id/rl_title"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/topBar_height"
-            android:layout_below="@+id/titlebar"
-            android:background="@drawable/base_bg">
-    </com.filemanager.view.PathBar>
+            android:layout_height="wrap_content">
+
+        <include layout="@layout/base_titlebar2"/>
+        <com.filemanager.view.PathBar
+                android:id="@+id/pathbar"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/topBar_height"
+                android:layout_below="@+id/titlebar"
+                android:background="@drawable/base_bg">
+        </com.filemanager.view.PathBar>
+    </RelativeLayout>
+
     <include
             android:id="@+id/bottom_layout"
             layout="@layout/storage_analysis_layout"
