--- a/FileManager/res/layout/item_filelist.xml
+++ b/FileManager/res/layout/item_filelist.xml
@@ -28,8 +28,9 @@
 
         <ImageView
             android:id="@+id/icon"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="@dimen/list_icon_size"
+            android:layout_height="@dimen/list_icon_size"
+            android:layout_margin="@dimen/list_margin"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_gravity="center_vertical"
