--- a/FileManager/res/layout/item_filelist.xml
+++ b/FileManager/res/layout/item_filelist.xml
@@ -14,10 +14,11 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:minHeight="?android:attr/listPreferredItemHeight" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:gravity="center_vertical"
+              android:orientation="horizontal">
 
     <LinearLayout
         android:id="@+id/item_ll"
@@ -28,13 +29,13 @@
 
         <ImageView
             android:id="@+id/icon"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="@dimen/base_list_icon_size"
+            android:layout_height="@dimen/base_list_icon_size"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_gravity="center_vertical"
             android:contentDescription="@string/item_icon"
-            android:scaleType="centerInside" />
+            android:scaleType="fitXY" />
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -86,4 +87,4 @@
         </LinearLayout>
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
