[fix] 文件管理器 bug修复，剪切空文件夹到当前目录消失问题 ， 剪切，复制操作退出多选模式，去掉列表快速滑动 (cherry picked from commit 5b32602)

--- a/FileManager/res/layout/filelist.xml
+++ b/FileManager/res/layout/filelist.xml
@@ -56,7 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:cacheColorHint="#00000000"
-                android:fastScrollEnabled="true" >
+                android:fastScrollEnabled="false" >
             </ListView>
 
             <TextView
