[mod] 文件夹管理器多选布局高度修改

--- a/FileManager/res/layout/filelist_legacy_multiselect.xml
+++ b/FileManager/res/layout/filelist_legacy_multiselect.xml
@@ -14,7 +14,7 @@
     <com.filemanager.view.LegacyActionContainer
         android:id="@+id/action_container"
         android:layout_width="fill_parent"
-        android:layout_height="@dimen/topBar_height"
+        android:layout_height="48dp"
         android:background="@drawable/base_bg" />
 
 </LinearLayout>
