[mod] 更新progress bar 颜色为新版颜色

--- a/FileManager/res/drawable/bg_progress_bar.xml
+++ b/FileManager/res/drawable/bg_progress_bar.xml
@@ -29,7 +29,7 @@
         <clip>
             <shape>
                 <corners android:radius="10dip" />
-                <solid android:color="@color/base_blue" />
+                <solid android:color="@color/blue_1ca0ec" />
             </shape>
         </clip>
     </item>
