--- a/FileManager/res/layout/item_filelist.xml
+++ b/FileManager/res/layout/item_filelist.xml
@@ -85,6 +85,18 @@
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </LinearLayout>
         </LinearLayout>
+
+        <CheckBox
+            android:id="@+id/checkbox_cb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:button="@drawable/base_checkbox_selector"
+            android:clickable="false"
+            android:focusable="false"
+            android:gravity="center"
+            android:checked="false"
+            android:visibility="gone"/>
     </LinearLayout>
 
 </LinearLayout>
