--- a/FileManager/res/layout/filelist_browse.xml
+++ b/FileManager/res/layout/filelist_browse.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <include layout="@layout/base_titlebar2" />
 
@@ -25,8 +25,14 @@
 
     <include layout="@layout/filelist"
         android:layout_below="@+id/pathbar"
+        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="match_parent" />
+
+    <include
+        layout="@layout/file_operation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
