--- a/FileManager/res/layout/dialog_cut_copy_layout.xml
+++ b/FileManager/res/layout/dialog_cut_copy_layout.xml
@@ -6,13 +6,28 @@
     android:paddingLeft="12dp"
     android:paddingRight="12dp">
 
-    <com.filemanager.view.PathBar
-        android:id="@+id/pathbar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/topBar_height"
-        android:gravity="center_vertical"
-        android:background="@color/white" >
-    </com.filemanager.view.PathBar>
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_select_sd"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/topBar_height"
+            android:text="SDCard "
+            android:gravity="center"
+            android:textColor="@color/grey_999999"
+            android:textSize="13sp" />
+
+        <com.filemanager.view.PathBar
+            android:id="@+id/pathbar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/topBar_height"
+            android:background="@color/white"
+            android:gravity="center_vertical"/>
+    </LinearLayout>
 
     <include layout="@layout/dialog_filelist"
         android:layout_alignParentBottom="true"
