--- a/FileManager/res/drawable/bg_action_container_button.xml
+++ b/FileManager/res/drawable/bg_action_container_button.xml
@@ -2,11 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- pressed -->
-    <item android:state_pressed="true"><color android:color="@color/press" />
+    <item android:state_pressed="true"><color android:color="#edf8fe" />
     </item>
 
     <!-- focused -->
-    <item android:state_focused="true"><color android:color="@color/focus" />
+    <item android:state_focused="true"><color android:color="#edf8fe" />
     </item>
 
 </selector>
