--- a/FileManager/res/layout/item_filelist.xml
+++ b/FileManager/res/layout/item_filelist.xml
@@ -75,7 +75,9 @@
                 style="@style/base_item_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:minWidth="80dp"
                 android:paddingRight="0dp"
+                android:gravity="right"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
                 android:maxLines="1"
